--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,7 @@
-spring.jpa.hibernate.ddl-auto=update
-spring.sql.init.platform=postgres
-spring.datasource.url=${SRPING_DATASOURCE_URL}
-spring.datasource.username=${SRPING_DATASOURCE_USERNAME}
-spring.datasource.password=${SRPING_DATASOURCE_PASSWORD}
+## Database Properties
+spring.datasource.url = jdbc:mysql://localhost:3306/bulatcc?useSSL=false
+spring.datasource.username = root
+spring.datasource.password = root
 ## Hibernate Properties
-server.error.include-message = always
-spring.jpa.open-in-view = true
-spring.thymeleaf.cache=true
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto = create-drop
