--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.sql.init.platform=postgres
+spring.sql.init.platform=create-drop
 spring.datasource.url=${SRPING_DATASOURCE_URL}
 spring.datasource.username=${SRPING_DATASOURCE_USERNAME}
 spring.datasource.password=${SRPING_DATASOURCE_PASSWORD}
